# ADiKtEd

./: .gitignore  CMakeLists.txt  MAKEFILE  MAP  MAP.HLP  MAP.INI  Makefile.win  README.TXT  README.md  TUTORIAL.TXT  action.c  action.h  bulcommn.c  bulcommn.h  dernc.c  dernc.h  draw_map.c  draw_map.h  file.c  font.c  globals.h  graffiti.c  graffiti.h  graffiti_font.c  input_kb.c  input_kb.h  internal.c  internal.h  lev_column.c  lev_column.h  lev_data.c  lev_data.h  lev_files.c  lev_files.h  lev_script.c  lev_script.h  lev_things.c  lev_things.h  main.c  main.h  (+57 more)
cmake/: FindMath.cmake  examples.cmake
docs/: README.TXT  README_ADIKTED.TXT  adikted_tutorial.htm  adikted_tutorial.html  dk_adikted_manual.htm  dk_docs_style.css  dk_editor_hdinst.htm  dk_scripting_ref.htm
example1/: putgems.c  putgems.dev
example2/: Makefile.win  puttrain.c
example3/: Makefile.win  viewmap.c  viewmap.dev
example4/: putemple.c  putemple_private.rc
examples/putemple/: Makefile.win  putemple.c  putemple.dev  putemple_private.h
examples/putgems/: Makefile.win  putgems.c
examples/puttrain/: puttrain.c  puttrain.dev
examples/viewmap/: viewmap.c  viewmap_private.h  viewmap_private.rc
libadikted/: CMakeLists.txt  Makefile  Makefile.win  adidoxy.conf  adikted.dev  adikted.h  adikted.layout  adikted_private.h  adikted_private.rc  arr_utils.c  arr_utils.h  bulcommn.c  bulcommn.h  dernc.c  dernc.h  draw_map.c  draw_map.h  globals.h  graffiti.c  graffiti.h  graffiti_font.c  lbfileio.c  lbfileio.h  lev_column.c  lev_column.h  lev_data.c  lev_data.h  lev_files.c  lev_files.h  lev_script.c  lev_script.h  lev_things.c  lev_things.h  libadi_main.c  libadikted.def  libadikted.dev  libadikted.layout  libadikted.pc.in  libadikted_private.h  libadikted_private.rc  (+26 more)
libadikted/cmake/: FindBsd.cmake
libadikted/mtwist/: README.txt
mapslang/: CMakeLists.txt  Makefile  Makefile.win  input_kb.c  main.c  map  map.dev  map.hlp  map.ini  map.layout  map_private.h  map_private.rc  output_scr.c  output_scr.h  scr_actn.c  scr_actn.h  scr_clm.c  scr_cube.c  scr_help.c  scr_help.h  scr_list.c  scr_rwrk.c  scr_slab.c  scr_thing.c  scr_thing.h  scr_tileset.c  scr_tileset.h  scr_txted.c  scr_txted.h  scr_txtgen.c  scr_txtgen.h  textmenu.c  textmenu.h  var_utils.c  var_utils.h
mapslang/libslang-patches/: libslang_private.rc  slang-modules-mingw32-makefile.patch  slang-slsh-mingw32-makefile.patch  slang-src-mingw32-makefile.patch
